Fixed auto-alignment of the search parameters form for the phone version.

--- a/src/components/SearchFilters/SearchFilters.module.css
+++ b/src/components/SearchFilters/SearchFilters.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   width: 335px;
+  margin: 0 auto;
 }
 
 .title {
